--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="Texonation" name="description" />
+  <meta content="Vakeeljeee" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="login-style.css">
-  <title>Texonation</title>
+  <title>Vakeeljeee</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
